--- a/prototype/src/scss/components/landing.scss
+++ b/prototype/src/scss/components/landing.scss
@@ -3,7 +3,7 @@ section.home {
 	transition: all 300ms ease;
 
 	&:hover {
-		box-shadow: 0 0 10px 0 rgba(black, 0.1);
+		box-shadow: 0 5px 10px 0 rgba(black, 0.1);
 
 		img {
 			transform: scale(1.1);
@@ -83,7 +83,6 @@ section.home {
 		flex-wrap: nowrap;
 		border-radius: 6px;
 
-		.image,
 		.text {
 			flex-basis: 33.33333%;
 		}
@@ -91,6 +90,8 @@ section.home {
 		.image {
 			overflow: hidden;
 			margin: 10px;
+			flex-basis: 66.66666%;
+			border-radius: 6px;
 
 			&:last-of-type {
 				margin-left: 0;
