--- a/prototype/src/scss/components/navigation.scss
+++ b/prototype/src/scss/components/navigation.scss
@@ -216,7 +216,7 @@
 						border-radius: 6px;
 						outline: none;
 						border: none;
-						padding: 0;
+						padding: 0 5px;
 						background-color: #444;
 					}
 
