--- a/prototype/src/scss/components/about.scss
+++ b/prototype/src/scss/components/about.scss
@@ -26,6 +26,15 @@
             line-height: 1.44;
         }
 
+        a {
+            text-decoration: underline;
+
+            &:hover {
+                color: $color-tertiary;
+            }
+
+        }
+
     }
 
 }
