--- a/prototype/src/scss/components/navigation.scss
+++ b/prototype/src/scss/components/navigation.scss
@@ -494,6 +494,7 @@
 				transition: all 300ms ease;
 				display: none;
 				z-index: 9999;
+				box-shadow: 0 5px 5px 0px rgba(black, 0.1);
 
 				li {
 					float: none;
