--- a/prototype/src/scss/components/landing.scss
+++ b/prototype/src/scss/components/landing.scss
@@ -26,9 +26,11 @@ section.home {
 		.image {
 			overflow: hidden;
 			margin: 10px;
+			border-radius: 6px;
 
 			img {
 				transition: all 300ms ease;
+				border-radius: 6px;
 			}
 
 		}
@@ -40,6 +42,8 @@ section.home {
 
 			&-container {
 				align-self: center;
+				margin: 0 auto;
+				display: block;
 			}
 
 			.title {
