--- a/prototype/src/scss/components/landing.scss
+++ b/prototype/src/scss/components/landing.scss
@@ -40,6 +40,10 @@ section.home {
 			padding: 0 100px;
 			text-align: center;
 
+			@media(max-width: 860px) {
+				padding: 0 50px;
+			}
+
 			&-container {
 				align-self: center;
 				margin: 0 auto;
@@ -118,7 +122,7 @@ section.home {
 
 			.title {
 				font-size: 48px;
-				margin: 0 0 25px 0;
+				margin: 0;
 				padding: 0;
 				display: block;
 				position: relative;
