--- a/prototype/src/scss/components/navigation.scss
+++ b/prototype/src/scss/components/navigation.scss
@@ -302,6 +302,8 @@
 		width: 36px;
 		height: auto;
 		cursor: pointer;
+		pointer-events: none;
+		z-index: 99999999999999999;
 
 		@media(max-width: 767px) {
 			display: block;
