--- a/prototype/src/scss/components/cart.scss
+++ b/prototype/src/scss/components/cart.scss
@@ -190,7 +190,7 @@
                         width: auto;
                         margin-top: 15px;
                         font-family: $font-secondary;
-                        display: none; // to remove later
+                        // display: none; // to remove later
                     }
 
                 }
