--- a/prototype/src/scss/components/about.scss
+++ b/prototype/src/scss/components/about.scss
@@ -9,6 +9,10 @@
         box-shadow: 0 5px 10px 0 rgba(black, 0.1);
         @include clearfix;
 
+        @media(max-width: 580px) {
+            text-align: center;
+        }
+
         h1 {
             margin-top: 0;
             margin-bottom: 20px;
@@ -20,10 +24,21 @@
             float: left;
             margin-right: 20px;
             border-radius: 6px;
+
+            @media(max-width: 580px) {
+                margin: 5px auto;
+                display: block;
+            }
+
         }
 
         p {
             line-height: 1.44;
+
+            @media(max-width: 580px) {
+                display: block;
+            }
+        
         }
 
         a {
