--- a/prototype/src/scss/components/about.scss
+++ b/prototype/src/scss/components/about.scss
@@ -31,6 +31,10 @@
                 float: none;
             }
 
+            @media(max-width: 420px) {
+                max-width: 100%;
+            }
+
         }
 
         p {
