--- a/prototype/src/scss/components/cart.scss
+++ b/prototype/src/scss/components/cart.scss
@@ -190,6 +190,7 @@
                         width: auto;
                         margin-top: 15px;
                         font-family: $font-secondary;
+                        order: 10000;
                         // display: none; // to remove later
                     }
 
