--- a/prototype/src/scss/components/cart.scss
+++ b/prototype/src/scss/components/cart.scss
@@ -396,6 +396,12 @@
 
         }
 
+        .wcppec-checkout-buttons__button {
+
+            text-align: right;
+
+        }
+
     }
 
     table {
