--- a/prototype/src/scss/components/lookbook.scss
+++ b/prototype/src/scss/components/lookbook.scss
@@ -43,6 +43,7 @@
             @media(max-width: 480px) {
                 flex-basis: 100%;
                 order: 100;
+                padding: 30px;
             }
 
 			&-container {
