--- a/prototype/src/scss/base/variables.scss
+++ b/prototype/src/scss/base/variables.scss
@@ -1,49 +1,12 @@
-@font-face {
-	font-family: 'Helvetica Neue';
-	src: url('../fonts/HelveticaNeue.eot');
-	src: url('../fonts/HelveticaNeue.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/HelveticaNeue.woff2') format('woff2'),
-		url('../fonts/HelveticaNeue.woff') format('woff'),
-		url('../fonts/HelveticaNeue.ttf') format('truetype'),
-		url('../fonts/HelveticaNeue.svg#HelveticaNeue') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Helvetica Neue';
-	src: url('../fonts/HelveticaNeue-Medium.eot');
-	src: url('../fonts/HelveticaNeue-Medium.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/HelveticaNeue-Medium.woff2') format('woff2'),
-		url('../fonts/HelveticaNeue-Medium.woff') format('woff'),
-		url('../fonts/HelveticaNeue-Medium.ttf') format('truetype'),
-		url('../fonts/HelveticaNeue-Medium.svg#HelveticaNeue-Medium') format('svg');
-	font-weight: 500;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Helvetica Neue';
-	src: url('../fonts/HelveticaNeue-Bold.eot');
-	src: url('../fonts/HelveticaNeue-Bold.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/HelveticaNeue-Bold.woff2') format('woff2'),
-		url('../fonts/HelveticaNeue-Bold.woff') format('woff'),
-		url('../fonts/HelveticaNeue-Bold.ttf') format('truetype'),
-		url('../fonts/HelveticaNeue-Bold.svg#HelveticaNeue-Bold') format('svg');
-	font-weight: bold;
-	font-style: normal;
-}
-
-
 $color-primary: black;
 $color-secondary: white;
 $color-tertiary: #C7B266;
-$color-light: #f4f4f4;
-$color-dark: #303030;
-$color-darker: #232323;
+$color-light: #9b9b9b;
+$color-dark: #444444;
+$color-darker: #333333;
 
 $font-primary: 'Oranienbaum', serif;
-$font-secondary: 'Helvetica Neue', sans-serif;
+$font-secondary: 'Barlow', sans-serif;
 
 @mixin clearfix {
 	&:after {
