--- a/prototype/src/scss/components/landing.scss
+++ b/prototype/src/scss/components/landing.scss
@@ -1,4 +1,4 @@
-section.home {
+.home {
 	margin: 20px 0;
 	transition: all 300ms ease;
 
@@ -11,105 +11,108 @@ section.home {
 
 	}
 
-	&__product {
-		background-color: white;
+	&__products {
 		position: relative;
 		display: flex;
 		flex-wrap: nowrap;
 		border-radius: 6px;
 
-		@media(max-width: 480px) {
-			flex-wrap: wrap;
-		}
+		// @media(max-width: 480px) {
+		// 	flex-wrap: wrap;
+		// }
 		
-		.image,
-		.text {
-			flex-basis: 50%;
+		&-item {
+			
+			.image,
+			.text {
+				flex-basis: 50%;
 
-			@media(max-width: 480px) {
-				flex-basis: 100%;
-				margin: 10px;
-			}
-
-		}
-
-		.image {
-			overflow: hidden;
-			margin: 10px;
-			border-radius: 6px;
-
-			@media(max-width: 480px) {
-				order: 1;
-			}
-
-			img {
-				transition: all 300ms ease;
-				border-radius: 6px;
-			}
-
-		}
-
-		.text {
-			display: flex;
-			padding: 0 100px;
-			text-align: center;
-
-			@media(max-width: 860px) {
-				padding: 0 50px;
-			}
-
-			@media(max-width: 600px) {
-				padding: 0 20px;
-			}
-
-			@media(max-width: 480px) {
-				order: 100;
-				margin: 20px auto;
-			}
-
-			&-container {
-				align-self: center;
-				margin: 0 auto;
-				display: block;
-			}
-
-			.title {
-				font-size: 48px;
-				margin: 0 0 25px 0;
-				padding: 0;
-				display: block;
-				position: relative;
-				font-family: $font-primary;
-				line-height: 1.1;
-
-				@media(max-width: 600px) {
-					font-size: 36px;
-					margin: 0 0 20px 0;
+				@media(max-width: 480px) {
+					flex-basis: 100%;
+					margin: 10px;
 				}
 
 			}
 
-			hr {
-				width: 60px;
-				height: 2px;
-				background-color: $color-tertiary;
-				margin: 0 auto;
-				display: block;
-				position: relative;
-				border: none;
-				outline: none;
-			}
-
-			.summary {
-				font-size: 16px;
-				margin: 20px 0 0 0;
-			}
-
-			.btn {
-				margin: 20px 0 0 0;
+			.image {
+				overflow: hidden;
+				margin: 10px;
+				border-radius: 6px;
 
 				@media(max-width: 480px) {
-					margin: 10px 0 0 0;
+					order: 1;
+				}
+
+				img {
+					transition: all 300ms ease;
+					border-radius: 6px;
+				}
+
+			}
+
+			.text {
+				display: flex;
+				padding: 0 100px;
+				text-align: center;
+
+				@media(max-width: 860px) {
+					padding: 0 50px;
+				}
+
+				@media(max-width: 600px) {
+					padding: 0 20px;
+				}
+
+				@media(max-width: 480px) {
+					order: 100;
+					margin: 20px auto;
+				}
+
+				&-container {
+					align-self: center;
+					margin: 0 auto;
+					display: block;
+				}
+
+				.title {
+					font-size: 48px;
+					margin: 0 0 25px 0;
+					padding: 0;
+					display: block;
+					position: relative;
+					font-family: $font-primary;
+					line-height: 1.1;
+
+					@media(max-width: 600px) {
+						font-size: 36px;
+						margin: 0 0 20px 0;
+					}
+
+				}
+
+				hr {
+					width: 60px;
+					height: 2px;
+					background-color: $color-tertiary;
+					margin: 0 auto;
+					display: block;
+					position: relative;
+					border: none;
+					outline: none;
+				}
+
+				.summary {
+					font-size: 16px;
+					margin: 20px 0 0 0;
+				}
+
+				.btn {
+					margin: 20px 0 0 0;
+
+					@media(max-width: 480px) {
+						margin: 10px 0 0 0;
+					}
+
 				}
 
 			}
